2007-01-14  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/timelineobjects.py:
	Forgot to add this file during the last commit.

2007-01-10  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Now depend on gst-python 0.10.6.1 for GIL lock issues in virtualmethods.
	Now depend on gnonlin-0.10.6.1 for locking issues when modifying the
	timeline.
	* pitivi/playground.py:
	(PlayGround.getCurrentTimePosition): new function for getting the time
	of the current bin.
	* pitivi/timeline.py:
	(TimelineObject.__repr__): Implement for proper representation in
	debug messages.
	(TimelineComposition.moveSource): Implement move method.
	(SimpleTimeline): Use SignalGroup for signals from the project. Add
	support for dragging sources within the timeline, and effectively
	propose moving around sources. Cleanup code a bit more.
	(SimpleTimelineSource): Add DnD support.

2007-01-08  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/gstwidget.py:
	Also take gint into account. I wonder how that one went away...

2007-01-08  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/exportsettingswidget.py:
	Typo fix
	* pitivi/ui/gstwidget.py:
	Add support for GEnum in property widgets.

2007-01-08  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/complexsource.py:
	* pitivi/ui/timelineobjects.py:
	Use default video icon if no real thumbnail is available.
	Fixes #392204

2006-12-28  Ernst Persson  <ernstp@gmail.com>

	reviewed by: Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/ruler.py:
	Make the ruler nicer. Add time text position.
	

2006-12-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	Add explanatory message in the source list when there's no sources.
	This helps people understand what they can do when they start PiTiVi.

2006-12-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	Don't call link/unlink functions if atee/vtee do not exist. This removes
	some warnings.
	* pitivi/discoverer.py: